some more work on demos pages

--- a/src/components/MainBackdrop/index.astro
+++ b/src/components/MainBackdrop/index.astro
@@ -3,5 +3,7 @@ import GardenBackdrop from "../canvases/GardenBackdrop.astro"
 ---
 
 <div>
-    <GardenBackdrop client:load />
+    <div>
+        <GardenBackdrop />
+    </div>
 </div>
