--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import "../styles/global.css";
+import NavBar from "../components/NavBar.astro"
+
+const {hasNavbar} = Astro.props
 ---
 
 <!doctype html>
@@ -8,11 +11,16 @@ import "../styles/global.css";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Iceberg&family=Michroma&family=Uncial+Antiqua&display=swap" rel="stylesheet">
+
 		<meta name="generator" content={Astro.generator} />
 		<title>Aramis' Garden</title>
 	</head>
-	<body>
-		<slot />
+	<body class="text-foreground bg-background">
+		{hasNavbar && <NavBar />}
+		<div class={`${hasNavbar ? "mt-[48px]" : ""}`}><slot /></div>
 	</body>
 </html>
 
@@ -20,7 +28,10 @@ import "../styles/global.css";
 	html,
 	body {
 		margin: 0;
-		width: 100%;
-		height: 100%;
+		width: 100%;		
 	}
 </style>
+
+<script>
+
+</script>
