--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,7 @@
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import PageSection from "../layouts/PageSection.astro"
-import RainBackdrop from "../components/canvases/RainBackdrop.astro"
-import Button from "../components/Buttons/BasicButton.astro"
 import MainBackdrop from "../components/MainBackdrop/index.astro"
-
-
-
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -15,7 +10,7 @@ import MainBackdrop from "../components/MainBackdrop/index.astro"
 ---
 
 <Layout>
-	<PageSection id="snow">
+	<PageSection id="hero">
 		<div class="absolute top-0 left-0 w-dvw h-dvh z-0">
 			<MainBackdrop />
 		</div>
@@ -107,30 +102,22 @@ Demos and small explorations into code concepts
 <script>
 	//initialize gsap
 	import gsap from "gsap";
+	import scrambleTextBase from "../constants/scramble-text-base";
 	import { ScrambleTextPlugin } from "gsap/all";
 	gsap.registerPlugin(ScrambleTextPlugin) 
 
 	//Screen Graphic Initialize
 	const graphicContainer = document.getElementById("crt")
 
-	if (graphicContainer) {
-	
-
-	
-
-	}
-
 	//Scramble Controls
-	const scrambleChars = "ᚡᚢᚣᚤᚥᚦᚧᚨᚩᚶᛃ	ᛄ";
 	const scramble1 = document.getElementById("scramble1");
 	if (scramble1) {
-		console.log("RAN")
 		gsap.to(scramble1, {
 			duration: 1.5,
 			scrambleText: {
 				text: "Where would you like to go?",
 				speed: 3,
-				chars: scrambleChars
+				chars: scrambleTextBase
 			}
 		})
 	}
