--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,18 +1,112 @@
 ---
 
+const {contentContainerId = ""} = Astro.props;
 ---
 
-<section
+<nav
     id="navBar" 
     class="fixed top-0 left-0 right-0 z-50 h-[48px] w-full bg-accent transition-transform duration-300 ease-in-out"
-/>
+>
+    <div class="mx-auto h-full flex items-center justify-between px-4">
+        <a href="/" class="text-foreground font-bold text-lg">Aramis' Garden</a>
+        <ul class="space-x-4 hidden md:flex">
+            <li><button id="themePicker">theme</button></li>
+            <li><a href="/demos" class="text-foreground hover:text-gray-300">Demos</a></li>
+            <li><a href="/about" class="text-foreground hover:text-gray-300">About</a></li>
+            <li><a href="/contact" class="text-foreground hover:text-gray-300">Contact</a></li>
+        </ul>
+        <button id="menuToggle" class="text-foreground md:hidden hover:scale-110 focus:outline-none transition-all duration-100">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+            </svg>
+        </button>
+    </div>
+    <div id="mobile-nav-container" class="hidden fixed top-[48px] left-0 w-dvw h-dvh z-50 backdrop-blur-xs md:hidden">
+        <div id="mobie-nav-menu" class="fixed bg-muted w-8/12 xs:w-6/12 sm:w-4-12 h-full overflow-hidden ">
+            <ul class="p-4">
+                <li class="text-muted-foreground transition-colors hover:text-foreground hover:underline">
+                    <a href="/">Home</a>
+                </li>
+                <li class="text-muted-foreground transition-colors hover:text-foreground hover:underline">
+                <a href="/">Home</a>
+                </li>
+                    <li class="text-muted-foreground transition-colors hover:text-foreground hover:underline">
+                    <a href="/">Home</a>
+                </li>
+                    <li class="text-muted-foreground transition-colors hover:text-foreground hover:underline">
+                    <a href="/">Home</a>
+                </li>
+                    <li class="text-muted-foreground transition-colors hover:text-foreground hover:underline">
+                    <a href="/">Home</a>
+                </li>
+            </ul>
+        </div>
+        
+
+    </div>
+</nav>
 <script>
-    const navbarElement = document.getElementById("navBar")
-    if (navbarElement) {
+    import {gsap} from "gsap";
+
+    // color scheme
+    let colorScheme = localStorage.getItem("color-scheme") || "light";
+
+    const themePicker = document.getElementById("themePicker");
+    if (themePicker) {
+        themePicker.addEventListener("click", () => {
+            const currentScheme = colorScheme;
+
+            const newScheme = currentScheme === "light" ? "dark" : "light";
+            document.documentElement.classList.remove(currentScheme);
+            document.documentElement.classList.add(newScheme);
+            localStorage.setItem("color-scheme", newScheme)
+            colorScheme = newScheme;
+            console.log("Color scheme changed to:", newScheme);
+        })
+    }
+
+
+    const navbarElement = document.getElementById("navBar");
+    let isMobileMenuOpen = false;
+    const menuToggle = document.getElementById("menuToggle");
+    const mobileNavContainer = document.getElementById("mobile-nav-container");
+    const mobileNavMenu = document.getElementById("mobie-nav-menu");
+
+    if (navbarElement && menuToggle && mobileNavContainer && mobileNavMenu) {
         let currentScroll = 0;
         window.addEventListener('scroll', (e) => {
             console.log(e)
+        });
+        //initialize menu to be on the left
+        gsap.to(mobileNavMenu, {
+            duration: 0.01,
+            x: "-100%",
+            onFinish: () => {
+                mobileNavContainer.classList.add("hidden");
+            }
+        });
+        menuToggle.addEventListener("click", () => {
+            if (isMobileMenuOpen) {
+                const tl = gsap.timeline();
+                
+                tl.to(mobileNavMenu, {
+                    duration: 0.2,
+                    x: "-100%",
+                })
+                .to(mobileNavContainer, {duration: 0.1, opacity: 0})
+                .add(() => {
+                    mobileNavContainer.classList.add("hidden");
+                });
+                isMobileMenuOpen = false;
+            } else {
+                mobileNavContainer.classList.remove("hidden");
+
+                gsap.to(mobileNavContainer, {duration: 0.15, opacity: 1});
+                gsap.to(mobileNavMenu, {duration: 0.3, x: "0%"});
+                isMobileMenuOpen = true;
+            }
         })
+
     }
 
 </script>
