--- a/src/components/canvases/RainBackdrop.astro
+++ b/src/components/canvases/RainBackdrop.astro
@@ -1,29 +1,31 @@
 
 
-<canvas id="garden-canvas" class="w-full h-full "/>
-<script type="module">
-  const canvas = document.getElementById("garden-canvas")
+<canvas id="garden-canvas" class="w-full h-full"/>
+<script type="module">const canvas = document.getElementById("garden-canvas");
 
-  const ctx = canvas.getContext('2d');
+const ctx = canvas.getContext("2d");
 
-  if (!ctx) {
-    console.log("no context")
-  }
+if (!ctx) {
+  console.log("no context");
+}
 
-    const numberOfDrops = 50;
-    const targetFPS = 60;
+let numberOfDrops = 50;
+const targetFPS = 45;
+let mainFill =
+  getComputedStyle(canvas.parentElement)
+    .getPropertyValue("--color-foreground")
+    .trim() || "white";
 
+let splashes = [];
+let drops = [];
+const buttonPositions = [];
 
-
-  let splashes = [];
-  const drops = [];
-  const buttonPositions = [];
-
-function updateButtonPositions() {
+function updateElementPositions() {
   buttonPositions.length = 0;
   const canvasRect = canvas.getBoundingClientRect();
+  const container = canvas.parentElement.parentElement;
 
-  document.querySelectorAll('.surface').forEach(button => {
+  container.querySelectorAll(".surface").forEach((button) => {
     const rect = button.getBoundingClientRect();
     buttonPositions.push({
       top: rect.top - canvasRect.top,
@@ -36,103 +38,90 @@ function updateButtonPositions() {
   });
 }
 
-  function resizeCanvas() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  updateButtonPositions();
-}
-resizeCanvas();
-window.addEventListener('resize', resizeCanvas);
-window.addEventListener('scroll', updateButtonPositions);
+updateElementPositions(); // initial call
 
-updateButtonPositions(); // initial call
-
-function nodeCollideWithElement (x, y) {
-  let collides = false;
-
-  return buttonPositions.some(pos => {
-    return x < pos.right && x > pos.left && y < pos.bottom && y > pos.top
-  })
+function nodeCollideWithElement(x, y) {
+  return buttonPositions.some((pos) => {
+    return x < pos.right && x > pos.left && y < pos.bottom && y > pos.top;
+  });
 }
 
-  class RainDrop {
-    x = 0;
-    y = 0;
-    angle = Math.PI / 2 + Math.PI / 12
-    velocity = 8;
-    radius = 1;
-    trail = [];
-    prevX = 0;
-    prevY = 0;
-    hit = false;
+class RainDrop {
+  x = 0;
+  y = 0;
+  angle = Math.PI / 2 + Math.PI / 12;
+  velocity = 400;
+  radius = 2;
+  trail = [];
+  prevX = 0;
+  prevY = 0;
+  hit = false;
 
-    constructor(x, y, angle = Math.PI / 2 + Math.PI / 12) {
-      this.x = x;
-      this.y = y;
-      this.angle = angle;
+  constructor(x, y, angle = Math.PI / 2 + Math.PI / 12) {
+    this.x = x;
+    this.y = y;
+    this.angle = angle;
+  }
+
+  update(deltaTime) {
+    const speed = (this.velocity * deltaTime) / 1000; // Adjust speed based on delta time
+
+    this.trail.push({ x: this.x, y: this.y });
+    if (this.trail.length > 1) {
+      this.trail.shift();
     }
 
-    update() {
+    this.prevX = this.x;
+    this.prevY = this.y;
 
-      this.trail.push({x: this.x, y: this.y})
-      if (this.trail.length > 1) {
-        this.trail.shift()
-      }
+    this.y += Math.sin(this.angle) * speed;
+    this.x += Math.cos(this.angle) * speed;
 
-      this.prevX = this.x;
-      this.prevY = this.y;
-
-      this.y += Math.sin(this.angle) * this.velocity;
-      this.x += Math.cos(this.angle) * this.velocity;
-
-      if (nodeCollideWithElement(this.x, this.y)) {
-        const {x, y} = this;
-        splashes.push(new SplashDrop(x, y, Math.PI/3))
-        splashes.push(new SplashDrop(x, y, Math.PI/2))
-        splashes.push(new SplashDrop(x, y, Math.PI/1.25))
-        this.y = -10;
-        this.x = Math.random() * canvas.width;
-        this.trail = [];
-        this.hit = true;
-        
-      } else if (this.y > canvas.height){
-        this.y = -10;
-        this.x = Math.random() * canvas.width;
-        this.trail = [];
-        this.hit = true;
-      }else {
-        this.hit = false;
-      }
-    }
-    
-
-    /**
-     * 
-     * @param ctx CanvasRendering2dContext
-     */
-    draw(ctx) {
-      ctx.fillStyle = "white";
-      ctx.shadowColor = "rgba(255, 255, 255, 0.9)";
-      ctx.shadowBlur = 10
-
-      
-      if (this.trail.length > 0) {
-        ctx.strokeStyle = "rgba(255, 255, 255, 0.5)";
-        ctx.lineWidth = 1;
-        ctx.beginPath();
-        ctx.moveTo(this.trail[0]?.x, this.trail[0]?.y);
-        ctx.lineTo(this.x, this.y);
-        ctx.stroke();
-      }
-
-      ctx.beginPath();
-      ctx.fillStyle = "white"
-      ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-      ctx.fill();
+    if (nodeCollideWithElement(this.x, this.y)) {
+      splashes.push(new SplashDrop(this.x, this.y, Math.PI / 3));
+      splashes.push(new SplashDrop(this.x, this.y, Math.PI / 2));
+      splashes.push(new SplashDrop(this.x, this.y, Math.PI / 1.25));
+      this.reset();
+    } else if (this.y > canvas.height) {
+      this.reset();
+    } else {
+      this.hit = false;
     }
   }
 
-  class SplashDrop {
+  reset() {
+    this.y = -10;
+    this.x = Math.random() * canvas.width;
+    this.trail = [];
+    this.hit = true;
+  }
+
+  /**
+   *
+   * @param ctx CanvasRendering2dContext
+   */
+  draw(ctx) {
+    ctx.fillStyle = mainFill;
+    ctx.shadowColor = mainFill;
+    ctx.shadowBlur = 10;
+
+    if (this.trail.length > 0) {
+      ctx.strokeStyle = mainFill;
+      ctx.lineWidth = 1;
+      ctx.beginPath();
+      ctx.moveTo(this.trail[0]?.x, this.trail[0]?.y);
+      ctx.lineTo(this.x, this.y);
+      ctx.stroke();
+    }
+
+    ctx.beginPath();
+    ctx.fillStyle = mainFill;
+    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+    ctx.fill();
+  }
+}
+
+class SplashDrop {
   x = 0;
   y = 0;
   vx = 0; // horizontal velocity
@@ -141,7 +130,7 @@ function nodeCollideWithElement (x, y) {
   radius = 0.5;
   canRemove = false;
 
-  constructor(x, y, angle = Math.PI / 4, speed = 10) {
+  constructor(x, y, angle = Math.PI / 4, speed = 0.25) {
     this.x = x;
     this.y = y;
     // Initial velocity: up and to the right
@@ -149,10 +138,10 @@ function nodeCollideWithElement (x, y) {
     this.vy = Math.sin(angle) * -speed; // negative for upward
   }
 
-  update() {
-    this.vy += this.gravity; // gravity pulls down
-    this.x += this.vx;
-    this.y += this.vy;
+  update(deltaTime) {
+    this.vy += (this.gravity * deltaTime) / 1000;
+    this.x += this.vx * deltaTime;
+    this.y += this.vy * deltaTime;
 
     if (this.y > canvas.height) {
       this.canRemove = true;
@@ -161,42 +150,84 @@ function nodeCollideWithElement (x, y) {
 
   draw(ctx) {
     ctx.beginPath();
-    ctx.fillStyle = "white";
+    ctx.fillStyle = mainFill;
     ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
     ctx.fill();
   }
 }
 
-  for (let i = 0; i < numberOfDrops; i++) {
-    const randomXPlacement = Math.random() * canvas.width * 1.5;
-    const randomYPlacement = Math.random() * -screen.height + -5;
-    drops.push(new RainDrop(randomXPlacement, randomYPlacement, Math.PI / 2 + Math.PI / 12))
-  }
+function resizeCanvas() {
+  const container = canvas.parentElement;
+  if (container) {
+    const rect = container.getBoundingClientRect();
+    canvas.width = rect.width;
+    canvas.height = rect.height;
+    updateElementPositions();
+    drops = [];
+    splashes = [];
 
-  let lastFrameTime = 0;
-  const frameDelay = 1000 / targetFPS;
-
-  function animate(time = 0) {
-    const delta = time - lastFrameTime;
-
-    if (delta >= frameDelay) {
-      lastFrameTime = time;
-      ctx.clearRect(0, 0, canvas.width, canvas.height)
-      drops.forEach(drop => {
-        drop.update();
-        drop.draw(ctx);
-      })
-
-      splashes.forEach(splash => {
-        splash.update();
-        splash.draw(ctx);
-      })
-      splashes = splashes.filter(splash => !splash.canRemove)
+    if (canvas.width < 500) {
+      numberOfDrops = 20;
+    } else if (canvas.width < 800) {
+      numberOfDrops = 30;
+    } else if (canvas.width < 1200) {
+      numberOfDrops = 40;
+    } else {
+      numberOfDrops = 50;
     }
 
-    requestAnimationFrame(animate)
+    for (let i = 0; i < numberOfDrops; i++) {
+      const randomXPlacement = Math.random() * canvas.width * 1.5;
+      const randomYPlacement = Math.random() * -screen.height + -5;
+      drops.push(
+        new RainDrop(
+          randomXPlacement,
+          randomYPlacement,
+          Math.PI / 2 + Math.PI / 12,
+        ),
+      );
+    }
+  }
+}
+resizeCanvas();
+window.addEventListener("resize", resizeCanvas);
+window.addEventListener("scroll", updateElementPositions);
+canvas.parentElement.childNodes.forEach((element) =>
+  element.addEventListener("scroll", updateElementPositions),
+);
+
+let lastFrameTime = 0;
+const frameDelay = 1000 / targetFPS;
+
+function animate(time = 0) {
+  const delta = time - lastFrameTime;
+
+  if (delta >= frameDelay) {
+    mainFill =
+      getComputedStyle(canvas.parentElement)
+        .getPropertyValue("--color-foreground")
+        .trim() || "white";
+    lastFrameTime = time;
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    drops.forEach((drop) => {
+      drop.update(delta);
+      drop.draw(ctx);
+    });
+
+    splashes.forEach((splash) => {
+      splash.update(delta);
+      splash.draw(ctx);
+    });
+    splashes = splashes.filter((splash) => !splash.canRemove);
+
+    /*buttonPositions.forEach(pos => {
+        ctx.fillStyle = "blue";
+        ctx.fillRect(pos.left, pos.top, pos.width, pos.height);
+      });*/
   }
 
-  animate();
+  requestAnimationFrame(animate);
+}
 
+animate();
 </script>
